Fix: Text on hover & Arrow alignment

--- a/src/app/article/page.module.css
+++ b/src/app/article/page.module.css
@@ -12,6 +12,11 @@
 .flexRow {
   display: flex;
   gap: 10px;
+  align-items: center;
+}
+
+.Arrow {
+  display: block;
 }
 
 .authorContainer {
